Consume delete files event in storage_service
