# backend/services/storage_service/src/controllers/upload.controller.ts
@@ -7,13 +7,11 @@ export async function handleUploadImage(req: Request, res: Response, next: NextF
         return next(new AppError("Image file is required", 400));
     }
 
-    const fileId = req.body.fileId;
-    if (fileId && !/\.(jpg|jpeg|png)$/i.test(fileId)) {
-        return next(new AppError("fileId field is invalid", 400));
-    }
-
     try {
-        const result = await s3uploadService.uploadSingleFile(req.file!, { fileId });
+        const result = await s3uploadService.uploadSingleFile({
+            file: req.file,
+            fileId: req.body.fileId,
+        });
         
         res.status(201).send(result);
     } catch (error) {
@@ -24,10 +22,6 @@ export async function handleUploadImage(req: Request, res: Response, next: NextF
 export async function handleInitializeS3MultipartUpload(req: Request, res: Response, next: NextFunction) {
     const fileId = req.body.fileId;
     const partCount = +req.body.partCount;
-
-    if (!partCount) {
-        return next(new AppError("partCount is invalid", 400));
-    }
 
     try {
         const result = await s3uploadService.initializeMultipartUpload(fileId, partCount);
@@ -42,9 +36,9 @@ export async function handleCompleteS3MultipartUpload(req: Request, res: Respons
     const { fileId, uploadId, parts } = req.body;
 
     try {
-        await s3uploadService.completeMultipartUpload(uploadId, fileId, parts);
+        const result = await s3uploadService.completeMultipartUpload(uploadId, fileId, parts);
 
-        res.status(200).send({ message: "Success" });
+        res.status(200).send(result);
     } catch (error) {
         next(error);
     }
