# backend/services/storage_service/swagger/swagger-v1.json
@@ -73,6 +73,7 @@
         },
         "/initialize-multipart-upload": {
             "post": {
+                "summary": "Initialize multipart upload and get presigned urls for uploading",
                 "security": [
                     {
                         "BearerAuth": {}
@@ -105,6 +106,9 @@
                                     "type": "object",
                                     "properties": {
                                         "uploadId": {
+                                            "type": "string"
+                                        },
+                                        "fileId": {
                                             "type": "string"
                                         },
                                         "parts": {
@@ -172,9 +176,26 @@
                     }
                 },
                 "responses": {
-                    "200": {},
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "url": {
+                                            "type": "string"
+                                        },
+                                        "fileId": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
                     "400": {},
-                    "401": {}
+                    "401": {},
+                    "404": {}
                 }
             }
         },
@@ -207,7 +228,8 @@
                 "responses": {
                     "200": {},
                     "400": {},
-                    "401": {}
+                    "401": {},
+                    "404": {}
                 }
             }
         }
